# FileCounter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cmdargs.rs  color.rs  main.rs  output.rs  walker.rs  worker.rs
