[package]
name = "fcnt"
version = "0.2.8"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/seamile/fcnt"
repository = "https://github.com/seamile/fcnt"
license = "MIT"
description = "fcnt is a cmd-line tool for counting the number of files in given directories."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
flume = "0.11.1"
num_cpus = "1.16.0"
regex = "1.11.0"
